fix / variable alignment

--- a/packages/ketchup/src/f-components/f-text-field/f-text-field.scss
+++ b/packages/ketchup/src/f-components/f-text-field/f-text-field.scss
@@ -578,7 +578,7 @@
     }
 
     &.#{$kup-class-warning} {
-      --kup-textfield-primary-color: var(--kup-warning-40-color);
+      --kup-textfield-primary-color: var(--kup-warning-50-color);
       --kup-textfield-primary-color-rgb: var(--kup-warning-color-50-rgb);
     }
 
